# Calquity_assignment

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  test.html
backend/: .dockerignore  .env.example  Dockerfile  app.py  package-lock.json  package.json  requirements.txt  test_client.py
backend/job_queue/: queue.py
backend/models/: request.py  response.py
backend/router/: ask.py  stream.py  upload.py
backend/services/: job_manager.py  llm.py  pdf_loader.py  rag.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: chat.tsx
frontend/app/api/analyze-image/: route.ts
frontend/app/api/groq-gen-ui/: route.ts
frontend/app/providers/: ai-provider.tsx
frontend/components/: ChatDisplay.tsx  ChatMessage.tsx  PDFViewer.tsx  Sidebar.tsx  SourceCards.tsx  UploadPDF.tsx
frontend/components/UI/: BarChart.tsx  InfoCard.tsx  SourceCard.tsx  Table.tsx  charts.tsx
frontend/components/chat/: chat-interface.tsx
frontend/lib/: component-registry.ts  component-registry.tsx  pdf-screenshot.ts  sse.ts
frontend/lib/ai/: groq.ts
frontend/store/: chat.ts  pdf.ts
