[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calquity_assignment"
version = "0.1.0"
description = "RAG system with PDF processing and LLM streaming"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # FastAPI and Web server
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",

    # PDF Processing
    "PyMuPDF>=1.22.5",
    "pdf2image>=1.16.3",
    "pypdf>=3.11.2",

    # RAG and Embeddings
    "chromadb>=0.4.15",
    "sentence-transformers>=2.5.1",
    "numpy>=1.24.0",

    # LLM and Groq
    "groq>=0.4.2",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.3.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.13.0",
    "mypy>=1.7.0",
]

[project.urls]
Repository = "https://github.com/subhamagarrwal/Calquity_assignment"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

